# muenvsubst

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Dockerfile.uclibc  README.md  _clang-format  build-musl.sh  build-uclibc.sh  build.sh  conanfile.txt  functions.md
.github/workflows/: build.yml
cli/: CMakeLists.txt  inja_renderer.cpp  inja_renderer.h  main.cpp  tools.cpp
lib/: CMakeLists.txt  finalize.h  inja_renderer.cpp  inja_renderer.h  process_executor.cpp  process_executor.h  template_loader.cpp  template_loader.h  tools.cpp  tools.h
lib/funcs/: base64.cpp  base64.h  json.cpp  json.h  other.cpp  other.h  shell.cpp  shell.h  string.cpp  string.h
src/: inja_renderer.cpp  main.cpp  mstch_renderer.cpp  mstch_renderer.h  tools.h
test/: CMakeLists.txt  functions_test.cpp  includes_test.cpp  process_executor_test.cpp
test/common/: main.cpp
